<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WalletActivity">

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/wallet_info"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins" />

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/zero" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_die"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/zero"
        android:textColor="@color/colorAccent"
        android:textSize="96sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_prev_roll_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_roll" />

        <TextView
            android:id="@+id/txt_prev_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_num_wins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wins_rolled" />

        <TextView
            android:id="@+id/txt_num_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/txt_total_rolls_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_rolls" />

        <TextView
            android:id="@+id/txt_total_rolls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_dbl_wins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dbl_wins" />

        <TextView
            android:id="@+id/txt_dbl_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/txt_dbl_others_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dbl_others" />

        <TextView
            android:id="@+id/txt_dbl_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/zero" />

    </LinearLayout>


</LinearLayout>